add name functionality

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 
 </head>
 <body>
-    <center><button type="button" input id="clickMe" 
-        onclick = randomBookNameGenerator()>I know you wanna know!</button></center>
-    <center><h2>Write your name below if you want a personalized book name!!</h2></center>
+    <center><button type="button" input id="clickMe" onclick = "randomBookNameGenerator(document.getElementById('name').value)">I know you wanna know!</button></center>
+    <center><h2>Write your name below if you want a personalized book name!! and hit the button!!</h2></center>
     <center><input type="text" id = "name" name = "name"></center>
 
     
